@@ -38,7 +38,7 @@ namespace PlasmaScriptengineKimono {
         public Applet(QObject parent, List<QVariant> args) : base(parent) {}
 
         public override bool Init() {
-            Applet().Resize(200, 200);
+            QSizeF oldSize = Applet().Size;
             QFileInfo program = new QFileInfo(MainScript());
 
             appletAssembly = Assembly.LoadFile(program.AbsoluteFilePath());
@@ -69,6 +69,8 @@ namespace PlasmaScriptengineKimono {
 
             applet = (PlasmaScripting.Applet) Activator.CreateInstance(appletType, new object[] { this });
             applet.Init();
+            if (oldSize.Width() > 10 && oldSize.Height() > 10)
+                Applet().Size = oldSize;
             SetUpEventHandlers();
             return true;
         }
